# neurocvr-ai-platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: synthetic_glm_benchmark.yaml
data/demo/: sub-01_etco2.csv
docs/: aws_ec2_deployment.md  cloud_deployment.md  model_card.md  portfolio_summary.md
reports/mlflow_sweep/: experiment_report.md  sweep_runs.csv  sweep_summary.csv
src/neurocvr/: cli.py
src/neurocvr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/neurocvr/api/: app.py  schemas.py
src/neurocvr/config/: benchmark.py
src/neurocvr/cvr/: glm.py
src/neurocvr/data/: loaders.py  writers.py
src/neurocvr/evaluation/: benchmark.py  experiment_analysis.py  metrics.py  mlflow_tracking.py  tracking.py
src/neurocvr/preprocessing/: bold.py  etco2.py
src/neurocvr/reporting/: experiment_report.py  qc_report.py
src/neurocvr/simulation/: synthetic.py
tests/: test_api.py  test_benchmark.py  test_bold.py  test_config.py  test_etco2.py  test_experiment_analysis.py  test_experiment_report.py  test_glm.py  test_loaders.py  test_metrics.py  test_mlflow_tracking.py  test_qc_report.py  test_synthetic.py  test_tracking.py  test_writers.py
