[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocvr"
version = "0.1.0"
description = "Cloud-native AI-assisted BOLD-fMRI cerebrovascular reactivity analysis pipeline."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dayoon Jung" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "nibabel>=5.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "ipykernel>=6.29",
]

ml = [
    "torch>=2.2",
    "mlflow>=2.10",
]


[project.scripts]
neurocvr = "neurocvr.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
